MOD:裁剪块可拖拽

--- a/takePic.html
+++ b/takePic.html
@@ -38,6 +38,7 @@
 
             var clipBtn = document.getElementById("clipBtn");
             clipBtn.addEventListener("click", function (e) {
+                shawn.config.isClip = true;
                 shawn.drawClipRect();
             });
         </script>
